--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "index.js", "use": "@vercel/node" }
-  ],
+  "functions": {
+    "api/climate-stories.js": {
+      "memory": 2048,
+      "maxDuration": 30
+    }
+  },
   "routes": [
     { "src": "/(.*)", "dest": "/" }
-  ]
+  ],
+  "regions": ["pdx1"]
 }
