--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "bryson palmer",
   "license": "ISC",
   "dependencies": {
+    "chrome-aws-lambda": "^9.1.0",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
-    "puppeteer": "^23.6.0"
+    "puppeteer-core": "^23.6.0"
   }
 }
