--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "author": "bryson palmer",
   "license": "ISC",
   "dependencies": {
-    "chrome-aws-lambda": "^9.1.0",
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
     "express": "^4.21.1",
-    "nodemon": "^3.1.7",
-    "puppeteer-core": "^23.6.0"
+    "nodemon": "^3.1.7"
   }
 }
