--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     }
   },
   "routes": [
-    { "src": "/(.*)", "dest": "/" }
+    { "src": "/(.*)", "dest": "/api" }
   ],
   "regions": ["pdx1"]
 }
