--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,9 @@
       "maxDuration": 30
     }
   },
+  "rewrites": [
+        {"source": "/(.*)", "destination": "/api"}
+    ],
   "routes": [
     { "src": "/(.*)", "dest": "/api" }
   ],
