--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
     "api/climate-stories.js": {
       "memory": 1024,
       "maxDuration": 30
+    },
+    "api/vital-signs.js": {
+      "memory": 1024,
+      "maxDuration": 30
     }
   },
   "rewrites": [
