--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cheerio": "^1.0.0",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
-    "playwright": "^1.48.2"
+    "playwright": "^1.48.2",
+    "three": "^0.170.0"
   }
 }
