--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "climate-change-api",
   "type": "module",
   "version": "1.0.0",
-  "description": "An API of web scrapings of climate change data from various sources curated for your convenience.",
+  "description": "An API of web scrapings of climate change data from nasa.",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "postinstall": "npx playwright install chromium"
+    "postinstall": "npx playwright install-deps && npx playwright install chromium"
   },
   "author": "bryson palmer",
   "license": "ISC",
