--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
     "playwright": "^1.48.2",
+    "playwright-aws-lambda": "^0.11.0",
     "three": "^0.170.0"
   }
 }
