--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "author": "bryson palmer",
   "license": "ISC",
   "dependencies": {
+    "@sparticuz/chromium": "^126.0.0",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
-    "playwright": "^1.48.2",
-    "playwright-aws-lambda": "^0.11.0",
+    "puppeteer": "^22.13.1",
+    "puppeteer-core": "^22.13.1",
     "three": "^0.170.0"
   }
 }
