--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,15 @@
 {
   "version": 2,
+  "public": true,
   "functions": {
     "api/*.js": {
       "memory": 1024,
       "maxDuration": 60
     }
   },
+  "routes": [
+    { "src": "/", "dest": "/public/index.html" }
+  ],
   "env": {
     "PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD": "0"
   },
