--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     }
   },
   "routes": [
-    { "src": "/", "dest": "/public/index.html" }
+    { "src": "/", "dest": "/index.html" }
   ],
   "env": {
     "PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD": "0"
