--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@sparticuz/chromium": "^126.0.0",
+    "@vercel/node": "^3.2.24",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "express": "^4.21.1",
