Updated Vercel and added Dexie for IndexedDB integration.

--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@sparticuz/chromium": "^126.0.0",
-    "@vercel/node": "^3.2.24",
+    "@vercel/node": "^2.10.3",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
+    "dexie": "^4.0.10",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
     "puppeteer": "^22.13.1",
